[tool.poetry]
name = "dh-password-generator"
version = "0.1.0"
description = "Генератор паролей с различным сочетанием символов идлинны"
authors = ["JohnSoi <un.perso@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
